[package]
name = "yuniye"
description = "The Yuniye Programming Language"
version = "0.1.0"
authors = ["Divine Niiquaye Ibok <divineibok@gmail.com>"]
repository = "https://github.com/yuniye/yuniye"
readme = "README.md"
license = "MIT"
edition = "2021"

# publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash             = "1.1.0"
colored                = "2.0.0"
codespan-reporting     = "0.11.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["default"] }
# flamegraph  = "0.6.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
# codegen-units = 1

[[bench]]
name = "bench"
harness = false
